data/derived/fa15/progs/unify/prog1851.ml.out
Characters 232-239:
  let args = List.rev(List.combine(l1,l2)) in
                                  ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
